ADDED MORE LOREM IPSUM TEXTS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <div class="container">
         <div class="terms-and-conditions">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, labore!</p>
+            asperiores minima excepturi eveniet reiciendis velit debitis temporibus explicabo. Incidunt sit itaque,
+              reprehenderit fuga voluptatem officiis corrupti ipsa eveniet architecto dolorem magni facere doloribus aut
+              veritatis sequi quia repellendus aperiam assumenda exercitationem optio praesentium debitis. Excepturi unde
+              minus dignissimos at totam tempora beatae cumque, voluptates adipisci repudiandae asperiores repellat delectus
+              tempore voluptatem veritatis atque quaerat optio! Quasi, possimus molestiae hic modi quia minus eius veniam
+              aperiam assumenda fugiat fugit optio odio quas esse quam architecto officiis sunt quis cupiditate vel
+              voluptate
+              consequuntur nam porro harum. Fuga distinctio voluptate provident molestias perspiciatis fugit esse corrupti
+              adipisci quas eos dolor non cum ipsam repudiandae dolorem, quasi necessitatibus iusto unde similique
+              repellendus praesentium tenetur? Obcaecati aliquam nostrum vero expedita fuga, quae et quaerat modi error
+              adipisci eligendi fugit alias quia nihil laudantium quam tenetur ipsam explicabo nisi natus, rerum omnis,
+              debitis provident! Dolorum sequi recusandae, necessitatibus eos nesciunt cupiditate accusantium illum unde
+              minima. Labore sit quos voluptatem illum qui. Veritatis quis a mollitia asperiores repudiandae consequatur
+              assumenda, at tempora, modi voluptate sit blanditiis hic dignissimos harum consequuntur quia ipsam, architecto
+              nesciunt. Praesentium, mollitia? Delectus quod laudantium doloremque nihil?</p>
+        asperiores minima excepturi eveniet reiciendis velit debitis temporibus explicabo. Incidunt sit itaque,
+              reprehenderit fuga voluptatem officiis corrupti ipsa eveniet architecto dolorem magni facere doloribus aut
+              veritatis sequi quia repellendus aperiam assumenda exercitationem optio praesentium debitis. Excepturi unde
+              minus dignissimos at totam tempora beatae cumque, voluptates adipisci repudiandae asperiores repellat delectus
+              tempore voluptatem veritatis atque quaerat optio! Quasi, possimus molestiae hic modi quia minus eius veniam
+              aperiam assumenda fugiat fugit optio odio quas esse quam architecto officiis sunt quis cupiditate vel
+              voluptate
+              consequuntur nam porro harum. Fuga distinctio voluptate provident molestias perspiciatis fugit esse corrupti
+              adipisci quas eos dolor non cum ipsam repudiandae dolorem, quasi necessitatibus iusto unde similique
+              repellendus praesentium tenetur? Obcaecati aliquam nostrum vero expedita fuga, quae et quaerat modi error
+              adipisci eligendi fugit alias quia nihil laudantium quam tenetur ipsam explicabo nisi natus, rerum omnis,
+              debitis provident! Dolorum sequi recusandae, necessitatibus eos nesciunt cupiditate accusantium illum unde
+              minima. Labore sit quos voluptatem illum qui. Veritatis quis a mollitia asperiores repudiandae consequatur
+              assumenda, at tempora, modi voluptate sit blanditiis hic dignissimos harum consequuntur quia ipsam, architecto
+              nesciunt. Praesentium, mollitia? Delectus quod laudantium doloremque nihil?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum assumenda, ullam, sed quo ipsam officia
               adipisci eligendi fugit alias quia nihil laudantium quam tenetur ipsam explicabo nisi natus, rerum omnis,
               debitis provident! Dolorum sequi recusandae, necessitatibus eos nesciunt cupiditate accusantium illum unde
